[package]
name = "tma"
version = "0.1.0"
description = "The tmux Automator"
repository = "https://github.com/ndarilek/tma"
readme = "README.md"
keywords = ["tmux"]
license = "MIT"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]

[dependencies]
structopt = "0.1.0"
structopt-derive = "0.1.0"
getopts = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
