[package]
name = "tma"
version = "0.1.1"
description = "The tmux Automator"
repository = "https://gitlab.com/ndarilek/tma"
readme = "README.md"
keywords = ["tmux"]
license = "MIT"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]

[dependencies]
error-chain = "0-.11.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
